@@ -67,7 +67,8 @@ $test->DeleteFile ($nsiorfile);
 ################################################################################
 ## Start the implementation Repository
 
-$IMR->Arguments ("-o $imr_imriorfile -d $debug_level");
+print "-------> Starting IMR Locator\n";
+$IMR->Arguments ("-o $imr_imriorfile -d 5"); #$debug_level");
 $IMR_status = $IMR->Spawn ();
 if ($IMR_status != 0) {
     print STDERR "ERROR: ImplRepo Service returned $IMR_status\n";
@@ -88,6 +89,7 @@ if ($act->PutFile ($imriorfile) == -1) {
     $IMR->Kill (); $IMR->TimedWait (1);
     exit 1;
 }
+
 if ($ti->PutFile ($imriorfile) == -1) {
     print STDERR "ERROR: cannot set file <$ti_imriorfile>\n";
     $IMR->Kill (); $IMR->TimedWait (1);
@@ -99,6 +101,7 @@ if ($ns->PutFile ($imriorfile) == -1) {
     exit 1;
 }
 
+print "-------> Starting IMR Activator\n";
 $ACT->Arguments("-d 1 -o $act_actiorfile -ORBInitRef ImplRepoService=file://$act_imriorfile  -ORBDebugLevel $debug_level");
 $ACT_status = $ACT->Spawn ();
 if ($ACT_status != 0) {
@@ -115,9 +118,10 @@ if ($act->WaitForFileTimed ($actiorfile,$act->ProcessStartWaitInterval()) == -1)
 ################################################################################
 ## Register the NotifyService
 
+print "-------> Register service\n";
 $TI->Arguments("-ORBInitRef ImplRepoService=file://$ti_imriorfile"
-               . " add NotifyService -c \""
-               . "$ns_ns_cmd -ORBInitRef ImplRepoService=file://$imr_imriorfile -ORBUseIMR 1 -ORBDebugLevel $debug_level"
+               . " add CosNotify:1 -w ../../../Notify_Service/ -c \""
+               . "./tao_cosnotification -boot -NoNameSvc -Factory CosNotify:1/NotifyService -ORBServerId CosNotify -ORBInitRef ImplRepoService=file://$imr_imriorfile -ORBUseIMR 1 -ORBDebugLevel $debug_level"
                . "\"");
 
 $TI_status = $TI->SpawnWaitKill ($ti->ProcessStartWaitInterval()+45);
@@ -128,10 +132,12 @@ if ($TI_status != 0) {
     exit 1;
 }
 
+
 ################################################################################
 ## Create IOR for NotifyService
 
-$TI->Arguments ("-ORBInitRef ImplRepoService=file://$ti_imriorfile ior NotifyService -f $ns_nsiorfile -ORBDebugLevel $debug_level");
+print "-------> Create IOR\n";
+$TI->Arguments ("-ORBInitRef ImplRepoService=file://$ti_imriorfile ior CosNotify:1/NotifyService -f $ns_nsiorfile");
 $TI_status = $TI->SpawnWaitKill ($ti->ProcessStartWaitInterval()+45);
 if ($TI_status != 0) {
     print STDERR "ERROR: TAO IMR returned $TI_status\n";
@@ -161,6 +167,7 @@ if ($test->PutFile ($nsiorfile) == -1) {
 ################################################################################
 ## Run the test
 
+print "-------> Run test\n";
 $TEST->Arguments ("-ORBInitRef NotifyService=file://$test_nsiorfile -ORBDebugLevel $debug_level");
 $TEST_status = $TEST->SpawnWaitKill ($test->ProcessStartWaitInterval()+45);
 if ($TEST_status != 0) {
@@ -171,8 +178,8 @@ if ($TEST_status != 0) {
 ################################################################################
 ## Shutdown the NotifyService
 
-$TI->Arguments ("-ORBInitRef ImplRepoService=file://$imr_imriorfile shutdown "
-                     . "NotifyService ");
+print "-------> Shutdown service\n";
+$TI->Arguments ("-ORBInitRef ImplRepoService=file://$imr_imriorfile shutdown CosNotify:1 ");
 $TI_status = $TI->SpawnWaitKill ($ti->ProcessStartWaitInterval()+45);
 if ($TI_status != 0) {
     print STDERR "ERROR: TAO IMR returned $TI_status\n";
@@ -182,6 +189,7 @@ if ($TI_status != 0) {
 ################################################################################
 ## Kill the IMR
 
+print "-------> Shutdown ImR Activator\n";
 $ACT_status = $ACT->TerminateWaitKill ($act->ProcessStopWaitInterval());
 
 if ($ACT_status != 0) {
@@ -189,6 +197,7 @@ if ($ACT_status != 0) {
     $status = 1;
 }
 
+print "-------> Shutdown ImR Locator\n";
 $IMR_status = $IMR->TerminateWaitKill ($imr->ProcessStopWaitInterval());
 
 if ($IMR_status != 0) {
